# sunflower

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: trackio_training.py
examples/notebooks/: dino-segmentation.ipynb  nabirds-dataset-analysis.ipynb  sam-segmentation.ipynb
graphics/: interpolate-between-images.ipynb  patch_embeddings.ipynb
src/sunflower/: __init__.py
src/sunflower/datasets/: __init__.py  base.py  celeba.py  cub.py  cure_or.py  dtd.py  ego_orient.py  imagenet.py  imagenet_100.py  imagenet_e.py  mnist.py  nabirds.py  waterbird.py
src/sunflower/models/: __init__.py  autoencoder.py  base.py  celeba.py  celeba_hq.py  dino.py
src/sunflower/saliency/: __init__.py  agi.py  base.py  blur_ig.py  deep_lift.py  gbp.py  gig.py  grad_cam.py  ig.py  inputxgradients.py  lime.py  lrp.py  occlusion.py
src/sunflower/utils/: __init__.py  basic.py  constants.py
