[project]
name = "sunflower"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David Carlyn", email = "davidecarlyn@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "accelerate",
    "captum",
    "diffusers",
    "grad-cam",
    "ipykernel",
    "matplotlib",
    "pandas",
    "pip",
    "rich",
    "saliency",
    "scipy",
    "torch",
    "torchvision",
    "tqdm",
    "trackio",
    "transformers",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[tool.uv.workspace]
members = [
    "external/x-pose",
]
